--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "sass": "^1.26.10"
   }
 }
