--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "concurrently": "^5.2.0",
+    "moment": "^2.27.0",
     "next": "9.4.4",
+    "next-connect": "^0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "mongodb": "^3.6.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "sass": "^1.26.10"
