--- a/config.json
+++ b/config.json
@@ -2,5 +2,19 @@
     "priceAdult":0.5,
     "priceChild":0.2,
     "adults":2,
-    "child":0
+    "child":0,
+
+    "API":[
+      "tours"
+    ],
+
+    "sliders":[
+      "sliderRow",
+      "indexSlider"
+    ],
+    "wigetSelectTours":[
+      "country",
+      "type"
+    ]
+
 }
