--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+    "db":"mongodb+srv://max:German2002@karamax.idcis.mongodb.net",
+    "collection":"travel",
     "priceAdult":0.5,
     "priceChild":0.2,
     "adults":2,
